v1.2.3 (#62)
* fix: updated tests and populate

* chore(deps): update dependency mongoose to v8.9.3 (#54)

* chore(deps): update dependency mongodb-memory-server to v10.1.3 (#53)

* fix(populator): remove unnecessary env-file flag from exec command

* fix(auth): update permissions to include 'admin' for payment and clinic roles

* Fix/populator fix (#61)

* feat(plan): add endpoint to retrieve a plan by ID

* feat(populators): update sample clinics and plans with UUIDs

---------


---------
