# src/routes/planRoute.js
@@ -1,7 +1,8 @@
 import express from 'express';
-import { obtainAllPlans} from '../controllers/planController.js';
+import { obtainAllPlans,obtainPlanById} from '../controllers/planController.js';
 const router = express.Router();
 
 router.get('/', obtainAllPlans);
+router.get('/:id', obtainPlanById);
 
 export default router;
